--- a/src/views/created-success.html
+++ b/src/views/created-success.html
@@ -20,21 +20,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
         rel="stylesheet">
-    
+   <script src="/scripts/redirectPageStudy.js" defer></script>
+
+    <!--<script> setTimeout(function(){window.open("/study")}, 3000) </script> -->
 </head>
 
 <body id="created-class">
 
 <main>
- <img id="imageSuccess" src="/images/success-background.svg" alt="Cadrastro realizado com sucesso">
- <img src="/images/icons/success-check-icon.svg" alt="Sucesso.img">
+<div id="container">
+<!-- <img id="imageSuccess" src="/images/success-background.svg" alt="Cadrastro realizado com sucesso">-->
+ <img id="successCheck" src="/images/icons/success-check-icon.svg" alt="Sucesso.img">
  <H1>Cadastro Salvo!</H1>
  <p>Tudo certo, seu cadastro está na nossa lista de professores. <br>
 Agora é só ficar de olho no seu WhatsApp.</p>
+  <a class="access-study" href="/study">Acessar lista</a>
+</div>
 </main>
-
 </body>
-
-<footer>
-    <a class="access-study" href="/study">Acessar lista</a>
-</footer>
