--- a/public/styles/partials/page-created-success.css
+++ b/public/styles/partials/page-created-success.css
@@ -1,42 +1,112 @@
 
 #created-class {
     background: var(--color-primary);
-    align-content: center;
+
     color: var(--color-title-in-primary);
     align-self: center;
+    background-image: url("/images/success-background.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+#created-class #container{
+    display: flex;
+    flex-direction: column;
+
+    height: 600px;
+    width: 90vw;
 
 }
 
-#created-class main p {
-    color: var(--color-text-complement);
-    font-size: 1.6rem;
+#created-class main #container #successCheck {
+    margin-top: 40%;
 }
 
-#created-class footer .access-study {
-    width: 100%;
+#created-class main #container p {
+    font-family: Archivo;
+    color: var(--color-small-info);
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 300;
+    margin-top: 1.2rem;
+
+}
+
+#created-class main #container h1 {
+    font-family: Archivo;
+    font-size: 2.8rem;
+    margin: 0;
+    text-align: center;
+    margin-top: 2.4rem;
+
+}
+
+#created-class main #container a {
     max-width: 240px;
     height: 5.6rem;
     border-radius: 0.8rem;
     color: var(--color-button-text);
     background-color: var(--color-secondary);
-    padding: 20px;
     border: 0;
     cursor: pointer;
     font: 700 1.4rem Archivo;
-
+    padding: 20px;
+    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+
+    margin-top: 3.2rem;
 
     text-decoration: none;
 
-    margin-top: 3.2rem;
-    align-self: baseline;
+    width: 16rem;
 
 }
 
-#created-class footer .access-study:hover {
+
+#created-class main #container a:hover {
     transition: 0.2s;
     background-color: var(-color-secondary-dark);
 
+}
 
+
+@media (min-width: 1000px) {
+
+    #created-class {
+        background-position: center;
+        background-size: auto;
+    }
+
+    #created-class #container {
+        max-width: 100vw;
+        max-height: 100vh;
+    }
+
+    #created-class main #container #successCheck {
+        margin-top: 7%;
+    }
+    
+
+
+    #created-class main #container p {
+        font-size: 1.5rem;
+        margin-top: 2rem;
+        max-width: 700px;
+    
+    }
+    
+    #created-class main #container h1 {
+       font-size: 4.8rem;
+       margin-top: 3rem;
+    
+    }
+
+    #created-class main #container a {
+        margin-bottom: 70%;
+        margin-top: 7rem;
+        width: 20rem;
+
+    }
 }
